# aftmancpp

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: GHMain.cpp.0E8584A7457CC656.idx  GHMain.hpp.722FF7146E25255E.idx  JSFileGet.cpp.58FF2EB0C9223A93.idx  JSFileGet.hpp.D1FB8E318049C184.idx  ZZ.cpp.9DF68A175996C6D8.idx  ZZ.hpp.86171AD35CCA6251.idx  main.cpp.D72FEC434B5378F9.idx
Source/: main.cpp
Source/GithubContent/: GHFinder.cpp  GHInstaller.cpp  GHMain.cpp  GHMain.hpp
Source/JsonF/: JSFileGet.cpp  JSFileGet.hpp
Source/ZipPP/: ZZ.cpp  ZZ.hpp
